Last preparations for release.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,18 @@
 include setup.py
+include setup.cfg
 include README.mediawiki
 include NEWS.mediawiki
 include LICENSE.txt
 include MANIFEST.in
 include Makefile
-include setup.cfg
-include setup.py
 global-include *.ebnf
+include tests/*
+include tests/data/*
+include tests/static/*
+include tests/out/README.txt
+include tests/out/report-0001.dat
+include tests/out/report-0001.html
+global-exclude *.pyc
+global-exclude *.pyo
+global-exclude *~
+global-exclude *.orig
