Add uTidylib to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ env:
 install:
   - pip install -q grako --use-mirrors
   - pip install -q lxml==$LXML_VERSION --use-mirrors
-script: make -C tests
+  - pip install -q uTidylib --use-mirrorss
+cript: make -C tests
