More travis tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ install:
   - pip install -q grako --use-mirrors
   - pip install -q lxml==$LXML_VERSION --use-mirrors
   - pip install -q git+https://github.com/nijel/utidylib
+  - pip install -q .
 script: make -C tests
