--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - LXML_VERSION=3.2.3
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libtidy
+  - sudo apt-get install -qq tidy
 install:
   - pip install -q grako --use-mirrors
   - pip install -q lxml==$LXML_VERSION --use-mirrors
