--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 env:
   - LXML_VERSION=2.3
   - LXML_VERSION=3.2.3
+matrix:
+  exclude:
+    - python: "3.3"
+      env: LXML_VERSION=2.3
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq tidy
