--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq tidy
 install:
+  - pip install coveralls --use-mirrors
   - pip install -q grako --use-mirrors
   - pip install -q lxml==$LXML_VERSION --use-mirrors
   - pip install -q .
-script: make -C tests
+script:
+  COVERAGE_FILE=../.coverage make -C tests COVERAGE="coverage run --source=smc"
+after_success:
+  coveralls
