--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install:
   - pip install -q lxml==$LXML_VERSION --use-mirrors
   - pip install -q .
 script:
-  COVERAGE_FILE=../.coverage make -C tests COVERAGE="coverage run --source=../smc"
+  PYTHONPATH=. coverage run --source=smc tests/mwtests.py
 after_success:
   coveralls
